--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,4 @@
-body {
-  background-image: url('../images/fondo.png');
-  background-attachment: fixed;
-  background-size: cover;
-}
-/* Estilos Index */
+/* Estilos generales */
 body {
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   margin: 0;
@@ -11,335 +6,22 @@ body {
   display: flex;
   flex-direction: column;
   min-height: 100vh;
-  background-color: rgba(255, 255, 255, 0.8); 
+  background-color: rgba(255, 255, 255, 0.8);
   color: #022521;
 }
 
-header {
-  background-color: rgba(255, 255, 255, 0.8); 
+header, section {
+  background-color: rgba(255, 255, 255, 0.8);
   padding: 20px;
   border-radius: 8px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   margin: 20px auto;
   width: 80%;
   max-width: 800px;
-
-  h1, h2 {
-    color: #022521; 
-   text-decoration: solid;
-  
-  }
-  
-  p {
-    color: #0f0f0f; 
-    font-weight: bold; 
-  
-  }
 }
 
-.logo img {
-  width: 10%; 
-  height: 10%;
-  border-radius: 50%; 
-  margin-right: 5%; 
-}
-
-.intro {
-  flex-grow: 0; 
-  align-self: center;
-  
-}
-
-#cart-button {
-  position: relative;
-}
-
-#cart-button img {
-  width: 30px;
-  height: auto; 
-  cursor: pointer;
-}
-
-.cart-count {
-  position: absolute;
-  top: 7px; 
-  right: -5px; 
-  background-color: red;
-  color: black;
-  border-radius: 100%;
-  padding: 4px;
-  font-size: 12px;
-}
-
-.description {
-  margin-left: 20px;
-}
-
-.description h1 {
-  margin: 0;
-  color: #333;
-  font-size: 2em;
-}
-
-.description p {
-  color: #666;
-}
-
-main {
-  flex: 1;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  padding: 0;
-}
-
-section {
-  background-color: rgba(255, 255, 255, 0.8); 
-  padding: 20px;
-  border-radius: 8px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  margin: 20px 0;
-  width: 80%;
-  max-width: 800px;
-}
-
-section h2 {
-  margin-top: 0;
-  color: #00796b;
-}
-
-section p, section ul {
-  color: #0c0c0c; 
-}
-
-section ul {
-  list-style-type: disc;
-  padding-left: 20px;
-}
-
-footer {
-  background-color: rgba(88, 85, 247, 0.8); 
-  color: #f7f3f3; 
-  text-align: center;
-  padding: 10px;
-  width: 100%;
-  position: relative;
-  bottom: 0;
-}
-
-@media screen and (max-width: 768px) {
-  header, section {
-    text-align: center; /* Centra el texto dentro del header y las secciones */
-  }
-
-  header {
-    flex-direction: column; /* Cambia a dirección de columna en pantallas pequeñas */
-    align-items: center; /* Centra los elementos */
-    justify-content: center; /* Centra verticalmente */
-  }
-
-  .logo img {
-    width: 30%; /* Tamaño relativo */
-    margin-right: 0; /* Sin margen en pantallas pequeñas */
-    margin-top: 20px; /* Ajusta el margen superior */
-  }
-
-  .intro {
-    margin-top: 20px; /* Ajusta el margen superior */
-  }
-}
-
-
-
-/* Estilos para la lista de videojuegos */
-.videojuego-list {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-  grid-gap: 20px;
-  margin-top: 80px; /* Ajuste del margen superior para compensar la altura del navbar */
-}
-
-/* Estilos para cada elemento de videojuego */
-.videojuego-item {
-  display: flex;
-  flex-direction: column;
-  justify-content: center; 
-  align-items: center; 
-  background-color: rgba(255, 255, 255, 0.8);
-  border: 1px solid #ccc;
-  border-radius: 5px;
-  overflow: hidden;
-  box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.1);
-}
-
-.videojuego-image {
-  max-width: 80%;
-  height: auto;
-  border-radius: 5px 5px 0 0; 
-}
-
-.videojuego-item:hover {
-  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2); 
-}
-
-.videojuego-item:hover {
-  background-color: rgba(194, 247, 184, 0.8);
-}
-
-.videojuego-details {
-  padding: 10px;
-  flex-grow: 1; 
-}
-
-.videojuego-title {
-  font-weight: bold;
-  margin-bottom: 5px;
-}
-
-.videojuego-description {
-  margin-top: 10px;
-  color: #666;
-}
-
-.videojuego-price {
-  color: #4CAF50;
-  font-weight: bold;
-}
-
-/* Estilos para el botón de compra */
-.comprar-button, .agregar-carrito-button {
-  background-color: #4CAF50;
-  color: white;
-  padding: 5px 10px;
-  border: none;
-  border-radius: 3px;
-  cursor: pointer;
-}
-
-.comprar-button:hover, .agregar-carrito-button:hover {
-  background-color: #45a049;
-}
-
-.navbar {
-  background-color: #333; 
-  padding: 10px 0;
-  text-align: center;
-  position: fixed;
-  width: 100%;
-  top: 0;
-  z-index: 1000;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.nav-item {
-  color: #fff;
-  text-decoration: none;
-  padding: 5px 10px; /* Reducido el padding para dispositivos pequeños */
-  border-radius: 5px;
-  transition: background-color 0.3s ease;
-  margin: 0 5px; /* Reducido el margen para dispositivos pequeños */
-  display: inline-block;
-  font-size: 14px; /* Tamaño de fuente reducido para dispositivos pequeños */
-}
-
-.nav-item:hover {
-  background-color: #555;
-}
-
-.logo {
-  margin-right: 20px;
-}
-
-.logo img {
-  width: 50px;
-  height: auto;
-}
-
-@media screen and (max-width: 768px) {
-  .nav-item {
-    padding: 3px 8px; /* Ajuste adicional en el padding para dispositivos pequeños */
-    margin: 0 3px; /* Ajuste adicional en el margen para dispositivos pequeños */
-    font-size: 12px; /* Tamaño de fuente aún más reducido para dispositivos pequeños */
-  }
-
-  .videojuego-list {
-    margin-top: 60px; /* Ajuste del margen superior más pequeño para dispositivos móviles */
-  }
-}
-
-/* Css para nosotros.html */
-body {
-  font-family: Arial, sans-serif;
-  line-height: 1.6;
-  margin: 60px 0 0; /* Añade un margen superior igual a la altura del navbar */
-  padding: 0;
-  box-sizing: border-box;
-  background-color: rgba(249, 249, 249, 0.8); 
-}
-
-.navbar {
-  background-color: #333; 
-  padding: 10px 0;
-  text-align: center;
-  position: fixed;
-  width: 100%;
-  top: 0;
-  z-index: 1000;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.nav-item {
-  color: #fff;
-  text-decoration: none;
-  padding: 5px 10px; 
-  border-radius: 5px;
-  transition: background-color 0.3s ease;
-  margin: 0 5px; 
-  display: inline-block;
-  font-size: 14px; 
-}
-
-.nav-item:hover {
-  background-color: #555;
-}
-
-.logo {
-  margin-right: 20px;
-}
-
-.logo img {
-  width: 50px;
-  height: auto;
-}
-
-.container_n {
-  max-width: 1200px;
-  margin: 0 auto;
-  padding: 20px;
-  background-color: rgba(255, 255, 255, 0.8);
-  box-shadow: none;  
-  border-radius: 20px; 
-}
-
-.titulo-seccion{
-  background-color: rgba(2, 0, 121, 0.8); 
-  color: #f7f3f3; 
-  text-align: center;
-  display: inline-block; 
-  padding: 10px;
-  width: 100%;
-  position: relative;
-  bottom: 10;
-}
-
-
-h1, h2 {
-  color: #3700ff; 
-  text-decoration: solid;
+header h1, header h2, section h2 {
+  color: #022521;
 }
 
 p {
@@ -347,51 +29,95 @@ p {
   font-weight: bold;
 }
 
+.logo img {
+  width: 50px;
+  height: auto;
+}
+
+.navbar {
+  background-color: #333;
+  padding: 10px 0;
+  text-align: center;
+  position: fixed;
+  width: 100%;
+  top: 0;
+  z-index: 1000;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.nav-item {
+  color: #fff;
+  text-decoration: none;
+  padding: 5px 10px;
+  border-radius: 5px;
+  transition: background-color 0.3s ease;
+  margin: 0 5px;
+  display: inline-block;
+  font-size: 14px;
+}
+
+.nav-item:hover {
+  background-color: #555;
+}
+
+.container, .container_n {
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 20px;
+  background-color: rgba(255, 255, 255, 0.8);
+  box-shadow: none;
+  border-radius: 20px;
+}
+
+.titulo-seccion {
+  background-color: rgba(2, 0, 121, 0.8);
+  color: #f7f3f3;
+  text-align: center;
+  display: inline-block;
+  padding: 10px;
+  width: 100%;
+  position: relative;
+  bottom: 10;
+}
+
 .team-member {
   max-width: 900px;
-  margin: 0 auto 20px; 
+  margin: 0 auto 20px;
   background-color: rgba(255, 255, 255, 0.8);
-  box-shadow: none;  
-  border-radius: 20px; 
+  box-shadow: none;
+  border-radius: 20px;
   display: flex;
   padding: 20px;
 }
 
 .team-member .image-container {
   margin-right: 20px;
-  flex-shrink: 0; 
+  flex-shrink: 0;
 }
 
 .team-member img {
-  width: 100px; 
-  border-radius: 50%; 
+  width: 100px;
+  border-radius: 50%;
 }
 
 .team-member .info {
   display: flex;
-  flex-direction: column; 
-  justify-content: center; 
+  flex-direction: column;
+  justify-content: center;
 }
 
 .team-member h2 {
-  font-weight: bold; 
+  font-weight: bold;
   margin: 20px;
 }
 
 .team-member p {
-  margin: 0px 20px 0; 
+  margin: 0px 20px 0;
 }
 
-/* Pago */
-
-.container_p{
-  max-width: 1200px;
-  margin: 0 auto;
-  padding: 20px;
-  background-color: rgba(255, 255, 255, 0.8);
-  box-shadow: none;  
-  border-radius: 20px; 
-
+/* Estilos específicos para la página de pago */
 #carrito-lista {
   margin-bottom: 20px;
 }
@@ -428,4 +154,17 @@ p {
 
 #finalizar-compra:hover {
   background-color: #45a049;
+}
+
+/* Estilos responsivos */
+@media screen and (max-width: 768px) {
+  .nav-item {
+    padding: 3px 8px;
+    margin: 0 3px;
+    font-size: 12px;
+  }
+
+  .videojuego-list {
+    margin-top: 60px;
+  }
 }
