--- a/css/style.css
+++ b/css/style.css
@@ -6,12 +6,15 @@ body {
   display: flex;
   flex-direction: column;
   min-height: 100vh;
-  background-color: rgba(255, 255, 255, 0.8);
+  background-color: rgba(255, 255, 255, 0.8); /* Fondo blanco con opacidad */
   color: #022521;
+  background-image: url('../images/fondo.png'); /* Fondo de la página */
+  background-attachment: fixed;
+  background-size: cover;
 }
 
 header, section {
-  background-color: rgba(255, 255, 255, 0.8);
+  background-color: rgba(255, 255, 255, 0.8); /* Fondo blanco con opacidad */
   padding: 20px;
   border-radius: 8px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
@@ -29,9 +32,14 @@ p {
   font-weight: bold;
 }
 
+.logo {
+  margin-right: 20px;
+}
+
 .logo img {
   width: 50px;
   height: auto;
+  border-radius: 50%;
 }
 
 .navbar {
